fix side scroll on mobile

--- a/_sass/new-styles/modules/footer/_contact.scss
+++ b/_sass/new-styles/modules/footer/_contact.scss
@@ -1,7 +1,10 @@
 .footer-contact {
+  max-width: 100%;
   padding: 0 20px;
+  overflow: hidden;
 
   &__company {
+    box-sizing: border-box;
     position: relative;
 
     &-name {
@@ -120,7 +123,8 @@
     display: flex;
     flex-flow: row nowrap;
     max-width: 1280px;
-    margin: 0 auto 50px;
+    margin: 0 auto;
+    padding-bottom: 50px;
 
     &__company, &__phone, &__mail, &__social {
       box-sizing: border-box;
